# bfa-sdk

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile.gateway  IRC-A_Whitepaper.md  LICENSE  README.es.md  README.md  README.pt.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
bfa_sdk/: __init__.py  config.py
bfa_sdk/core/: __init__.py  agent.py  gateway.py  interactive_agent.py  mcp.py  paseto.py
bfa_sdk/router/: embedder.py  search.py
examples/: mock_clima_agent.py  mock_cuentas_agent.py  mock_interactive_agent.py  mock_mdbank_mcp.py  mock_tarjetas_agent.py  run_demo.py  run_local_servers.py
examples/frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
examples/frontend/public/: index.html
examples/frontend/src/: App.jsx  ChatPage.jsx  Layout.jsx  RegistryPage.jsx  StateContext.js  StateUtilPage.jsx  index.jsx
examples/frontend/src/components/: AgentSelector.jsx  ChatBox.jsx  EventStream.jsx  PromptSuggestions.jsx  StatusPanel.jsx
examples/frontend/src/services/: agentAdapter.js
poc/: README.md  agent.py  gateway.py  mcp_server.py  run_poc.py
poc/content_generator/: README.md  extra_agent.py  keywords_mcp.py  orchestrator_agent.py  research_agent.py  reviewer_agent.py  run_content_poc.py  writer_agent.py
poc/content_generator/templates/: index.html
tests/: conftest.py  test_config.py  test_core_wrappers.py  test_embedder.py  test_gateway.py  test_interactive_agent.py  test_irca_security.py  test_router.py
